Changes: - added fonts - added README.md - fixed heights and footer position on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ html {
   text-align: center;
 }
 
+body {
+  position: relative;
+  min-height: 100vh;
+}
+
 /*
 ███████ ████████ ██    ██ ██      ███████
 ██         ██     ██  ██  ██      ██
@@ -23,6 +28,7 @@ html {
 body {
   background-color: rgb(233, 150, 122);
   color: var(--blue);
+  font-family: 'Montserrat', sans-serif;
 }
 
 header,
@@ -72,6 +78,7 @@ input {
   border-style: dashed;
   border-color: var(--blue);
   cursor: crosshair;
+  font-family: 'Montserrat', sans-serif;
   margin: 0 auto;
   padding: 5px;
   text-align: center;
@@ -86,19 +93,23 @@ input:focus {
   text-transform: uppercase;
 }
 
-
-p {
-  font-size: 1.6rem;
-}
-
 .btn {
   background-color: var(--blue);
   border: none;
   border-radius: 4px;
   color: whitesmoke;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.1rem;
   padding: 15px 30px;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+footer p {
+  font-size: 1.2rem;
 }
 
 /*
@@ -127,11 +138,8 @@ nav .icon-wrapper {
 
 nav img {
   height: 60px;
+  height: 7vh;
   margin: 5px 5px 0 10px;
-}
-
-main {
-  height: 100%;
 }
 
 .main-content {
@@ -140,8 +148,7 @@ main {
   height: 400px;
   justify-content: space-evenly;
   margin: 0 auto;
-  position: relative;
-  top: 20vh;
+  margin-top: 15vh;
   width: 550px;
 }
 
@@ -212,18 +219,6 @@ footer a {
   }
 }
 
-@media screen and (max-width: 1300px) and (orientation: portrait) {
-  h1 {
-    font-size: 1.6rem;
-  }
-
-  p {
-    font-size: 1.6rem;
-  }
-}
-
-@media screen and (max-width: 1300px) and (orientation: landscape) {}
-
 /*
  ██      ██████       ██████       ██████      ██████  ██   ██
 ███     ██  ████     ██  ████     ██  ████     ██   ██  ██ ██
@@ -231,31 +226,31 @@ footer a {
  ██     ████  ██     ████  ██     ████  ██     ██       ██ ██
  ██      ██████       ██████       ██████      ██      ██   ██
 */
-@media screen and (max-width: 1100px) and (orientation: lanscape) {
-  footer {
-    position: relative;
-  }
-}
-
-@media screen and (max-width: 1001px) {}
-
-@media screen and (max-width: 1001px) and (orientation: portrait) {
+@media screen and (max-width: 1001px) {
   .main-content {
-    top: 15vh;
+    width: 450px;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+    margin: 30px 0 20px;
+  }
+
+  input {
+    padding: 20px 0;
+    margin: 10px auto;
+  }
+
+  .btn {
+    margin: 30px 0;
   }
 }
 
-@media screen and (max-width: 1001px) and (orientation: landscape) {}
-
-@media screen and (max-height: 700px) and (max-width: 1000px) and (orientation: landscape) {}
-  
-  
-  @media screen and (max-width: 700px) and (orientation: landscape) {
-    .btn {
-      font-size: 1rem;
-      padding: 10px 40px;
-    }
+@media screen and (max-width: 1001px) and (orientation: landscape) {
+  body {
+    min-height: 700px;
   }
+}
 
 /*
  ██████  ██   ██  ██████      ██████  ██   ██
@@ -265,6 +260,7 @@ footer a {
  ██████       ██  ██████      ██      ██   ██
 */
 @media screen and (max-width: 640px) {
+
   input,
   input:focus {
     font-size: 1.2rem;
@@ -272,11 +268,14 @@ footer a {
 }
 
 @media screen and (max-width: 640px) and (orientation: portrait) {
+  .main-content {
+    width: 450px;
+  }
+
   .footer-wrapper img {
     height: 60px;
   }
 }
-
 
 /*
 ██   ██      █████       ██████      ██████  ██   ██
@@ -287,6 +286,10 @@ footer a {
 */
 @media screen and (max-width: 480px) {
   h1 {
+    font-size: 1.1rem;
+  }
+
+  h2 {
     font-size: 1rem;
   }
 
@@ -300,12 +303,12 @@ footer a {
     width: 250px;
   }
 
-  .btn {
-    font-size: 1rem;
+  input {
+    width: 80%;
   }
 
-  h2 {
-    font-size: 1.3rem;
+  .btn {
+    font-size: 1rem;
   }
 
   p {
@@ -313,19 +316,24 @@ footer a {
   }
 }
 
-/*
-██████      ███████      ██████      ██████  ██   ██
-     ██          ██     ██  ████     ██   ██  ██ ██
- █████          ██      ██ ██ ██     ██████    ███
-     ██        ██       ████  ██     ██       ██ ██
-██████         ██        ██████      ██      ██   ██
-*/
-@media screen and (max-width: 370px) {
-  .btn {
-    padding: 15px 40px;
+@media screen and (max-width: 380px) {
+  .main-content {
+    height: 340px;
+    margin-top: 80px;
   }
 
-  footer p {
-    padding: 10px 0 0;
+  h2 {
+    font-size: 1.4rem;
+    margin: 15px 0 10px;
+  }
+
+  input {
+    padding: 10px 0;
+    margin: 5px auto;
+  }
+
+  .btn {
+    margin: 20px 0;
+    padding: 25px 15px;
   }
 }
